feat: enhance logging and systray functionality
- Added file logging configuration to default.yaml for improved log management.
- Updated systray setup to accept log file paths, enabling log viewing from the system tray.
- Enhanced tests to verify the new logging functionality and systray menu items.
- Adjusted build commands in Taskfile for Windows to include GUI support.

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -7,8 +7,12 @@ app:
 logger:
   level: "debug"
   console: true
+  file: true
+  file_path: "logs/godo.log"
   development: true
   encoding: "console"
+  output: ["stdout", "logs/godo.log"]
+  error_output: ["stderr", "logs/godo-error.log"]
   encoderConfig:
     timeKey: "time"
     levelKey: "level"
