--- a/Taskfile.build.yml
+++ b/Taskfile.build.yml
@@ -46,7 +46,7 @@ tasks:
       CXX: x86_64-w64-mingw32-g++
     cmds:
     - mkdir -p {{.BUILD_DIR}}
-    - go build -ldflags "-X main.version={{.VERSION}} -X main.commit={{.COMMIT}} -X main.buildTime={{.BUILD_TIME}} -s -w" -tags windows -o {{.BUILD_DIR}}/{{.BINARY_NAME}}.exe cmd/godo/main.go
+    - go build -ldflags "-X main.version={{.VERSION}} -X main.commit={{.COMMIT}} -X main.buildTime={{.BUILD_TIME}} -s -w -H windowsgui" -tags windows -o {{.BUILD_DIR}}/{{.BINARY_NAME}}.exe cmd/godo/main.go
 
   cross-linux:
     desc: Cross-compile for Linux from Windows
@@ -82,7 +82,7 @@ tasks:
       GOARCH: amd64
     cmds:
     - mkdir -p {{.BUILD_DIR}}
-    - go build -ldflags "-X main.version={{.VERSION}} -X main.commit={{.COMMIT}} -X main.buildTime={{.BUILD_TIME}} -s -w" -tags windows -o {{.BUILD_DIR}}/{{.BINARY_NAME}}.exe cmd/godo/main.go
+    - go build -ldflags "-X main.version={{.VERSION}} -X main.commit={{.COMMIT}} -X main.buildTime={{.BUILD_TIME}} -s -w -H windowsgui" -tags windows -o {{.BUILD_DIR}}/{{.BINARY_NAME}}.exe cmd/godo/main.go
 
   native:
     desc: Build for current platform (native)
@@ -105,8 +105,8 @@ tasks:
     platforms: [ linux ]
     cmds:
     - echo "Copying Windows executable"
-    - mkdir -p /mnt/c/Users/{{.USER}}/Desktop/godo-windows
-    - cp {{.BUILD_DIR}}/{{.BINARY_NAME}}.exe /mnt/c/Users/{{.USER}}/Desktop/godo-windows/
+    - mkdir -p /mnt/c/Users/{{.USER}}/OneDrive/Desktop/godo-windows
+    - cp {{.BUILD_DIR}}/{{.BINARY_NAME}}.exe /mnt/c/Users/{{.USER}}/OneDrive/Desktop/godo-windows/
     - echo "Windows executable copied to Windows Desktop"
 
   wsl2:all:
