--- a/Taskfile.build.yml
+++ b/Taskfile.build.yml
@@ -18,11 +18,23 @@ tasks:
 
   wire:linux:
     desc: Generate wire code for Linux
+    sources:
+      - internal/container/wire.go
+      - internal/container/providers.go
+      - internal/container/wire_gen.go
+    generates:
+      - internal/container/wire_gen.go
     cmds:
     - cd internal/container && wire gen -tags linux
 
   wire:windows:
     desc: Generate wire code for Windows
+    sources:
+      - internal/container/wire.go
+      - internal/container/providers.go
+      - internal/container/wire_gen.go
+    generates:
+      - internal/container/wire_gen.go
     cmds:
     - cd internal/container && wire gen -tags windows
 
@@ -32,12 +44,17 @@ tasks:
     cmds:
     - task: wire:linux
 
-
-
   cross-windows:
     desc: Cross-compile for Windows from Linux/WSL2
     deps: [ wire:windows ]
     platforms: [ linux ]
+    sources:
+      - cmd/**/*.go
+      - internal/**/*.go
+      - go.mod
+      - go.sum
+      - configs/**/*.yaml
+      - internal/container/wire_gen.go
     env:
       CGO_ENABLED: 1
       GOOS: windows
@@ -52,6 +69,13 @@ tasks:
     desc: Cross-compile for Linux from Windows
     deps: [ wire:linux ]
     platforms: [ windows ]
+    sources:
+      - cmd/**/*.go
+      - internal/**/*.go
+      - go.mod
+      - go.sum
+      - configs/**/*.yaml
+      - internal/container/wire_gen.go
     env:
       CGO_ENABLED: 0
       GOOS: linux
@@ -64,6 +88,13 @@ tasks:
     desc: Build for Linux (native)
     deps: [ wire:linux ]
     platforms: [ linux ]
+    sources:
+      - cmd/**/*.go
+      - internal/**/*.go
+      - go.mod
+      - go.sum
+      - configs/**/*.yaml
+      - internal/container/wire_gen.go
     env:
       CGO_ENABLED: 1
       GOOS: linux
@@ -76,6 +107,13 @@ tasks:
     desc: Build for Windows (native)
     deps: [ wire:windows ]
     platforms: [ windows ]
+    sources:
+      - cmd/**/*.go
+      - internal/**/*.go
+      - go.mod
+      - go.sum
+      - configs/**/*.yaml
+      - internal/container/wire_gen.go
     env:
       CGO_ENABLED: 1
       GOOS: windows
