feat: enhance systray functionality with log file management and retry logic
- Implemented a retry mechanism for setting the system tray icon to improve reliability.
- Enhanced the systray menu to include detailed log file management, allowing users to view logs with proper error handling.
- Added informative dialogs to guide users when log files are missing or cannot be opened, improving user experience.
- Updated the configuration to exclude generated wire code from specific linters for cleaner code analysis.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -240,6 +240,21 @@ linters:
       - varnamelen
       - exhaustruct
       - wsl
+    # Exclude generated wire code
+    - path: wire_gen\.go
+      linters:
+      - funlen
+      - gocyclo
+      - gocognit
+      - cyclop
+      - maintidx
+      - wrapcheck
+      - errorlint
+      - gocritic
+      - nolintlint
+      - varnamelen
+      - exhaustruct
+      - wsl
     # Exclude mock files
     - path: mocks\.go
       linters:
