--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -198,6 +198,7 @@ tasks:
   wire:
     desc: Generate wire code for current platform
     cmds:
+    - wire ./internal/container
 
   mocks:
     desc: Generate all mocks using mockgen
