refactor: simplify logging configuration and enhance quick note functionality
- Removed unnecessary logging configuration options from config.yaml to streamline setup.
- Updated the application initialization to accept an external fyne.App instance, improving flexibility.
- Added debug logging in the hotkey manager to provide better visibility when the quick note is triggered.
- Enhanced the quick note window's Show() method with additional debug logs for improved traceability during UI interactions.

--- a/config.yaml
+++ b/config.yaml
@@ -9,19 +9,7 @@ logger:
   console: true
   file: true
   file_path: "logs/godo.log"
-  development: true
-  encoding: "console"
-  output: ["stdout", "logs/godo.log"]
-  error_output: ["stderr", "logs/godo-error.log"]
-  encoderConfig:
-    timeKey: "time"
-    levelKey: "level"
-    nameKey: "logger"
-    callerKey: "caller"
-    messageKey: "msg"
-    stacktraceKey: "stacktrace"
-    timeEncoder: "iso8601"
-    levelEncoder: "lowercase"
+  output: ["stdout"]
 
 database:
   path: "godo.db"
