feat: implement main application entry point and configuration
- Added main.go as the entry point for the Godo application, initializing dependencies and handling application lifecycle.
- Introduced FyneApp.toml for application metadata and configuration management.
- Updated .golangci.yml and Taskfile configurations to reflect changes in file structure and build processes.
- Removed outdated API-related files from the bruno/godo-api directory to streamline the project.

--- a/FyneApp.toml
+++ b/FyneApp.toml
@@ -9,7 +9,7 @@ Website = "https://github.com/jonesrussell/godo"
 
 [Source]
   Repo = "https://github.com/jonesrussell/godo"
-  Dir = "cmd/godo"
+  Dir = "."
 
 [Development]
   HelperText = "Development build with debug symbols"
