--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,15 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y gcc libgl1-mesa-dev xorg-dev mingw-w64
 
+      - name: Install wire
+        run: go install github.com/google/wire/cmd/wire@latest
+
+      - name: Generate wire code
+        run: |
+          cd internal/application/container
+          wire gen -tags linux
+          wire gen -tags windows
+
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6
         with:
