--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -6,7 +6,7 @@ before:
 
 builds:
 - id: windows
-  main: ./cmd/godo
+  main: ./main.go
   env:
   - CGO_ENABLED=1
   - CC=x86_64-w64-mingw32-gcc
@@ -20,7 +20,7 @@ builds:
   - windows
 
 - id: linux
-  main: ./cmd/godo
+  main: ./main.go
   env:
   - CGO_ENABLED=1
   goos:
